--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 Flask==2.3.2
 Flask-SocketIO==5.3.4
 python-dotenv
-gunicorn
-faster-whisper==0.6.0
 pydub==0.25.1
 openai==0.27.8
+gradio_client
+tiktoken
+gevent
